fix(lib): dislodged tag with attached close button
- Fixes the issue that tags with the attached close button were slightly
  dislodged from other tags. `BTag` with the attached close button is
  not actually a `.tag` but a `<div>` with `.tags`. Bulma imposes
  `margin-bottom: -0.5rem` or `margin-bottom: 1.0rem` on `.tags`, and
  this caused the misalignment. Introduces a new class `inline-tags` to
  cancel the margin imposed by Bulma.

issue buefy/buefy#3074

--- a/src/scss/components/_tag.scss
+++ b/src/scss/components/_tag.scss
@@ -25,3 +25,9 @@
         }
     }
 }
+
+.tags {
+    &.inline-tags {
+        margin-bottom: 0px;
+    }
+}
